fix align

--- a/src/components/Ticket/Ticket.scss
+++ b/src/components/Ticket/Ticket.scss
@@ -51,6 +51,7 @@
         display: flex;
         flex-direction: column;
         flex-basis: (100% / 3);
+        align-self: baseline;
       }
 
       &-title {
